--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@imgcook/plugin-template",
-  "version": "0.0.1",
+  "name": "@imgcook/pui-refactor",
+  "version": "0.0.2",
   "description": "plugin template",
   "main": "index.js",
   "scripts": {
